<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VegetalIndividual">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="353dp"
        android:layout_height="552dp"
        android:layout_margin="20dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="110dp"
                android:layout_height="106dp"
                android:layout_marginTop="32dp"
                android:background="#00E8E6E6"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toStartOf="@+id/nombreVegetal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/a"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/mesFinSemillero"
                app:layout_constraintTop_toBottomOf="@+id/imagen" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="72dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/semillero"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagen" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/de"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/mesIniSemillero"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/imagen" />

            <TextView
                android:id="@+id/mesIniSemillero"
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:textAlignment="center"
                android:textColor="#02188F"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/imagen" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginTop="26dp"
                android:text="@string/de"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/mesIniRecogida"
                app:layout_constraintStart_toEndOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="26dp"
                android:text="@string/a"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/mesFinRecogida"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/mesIniSiembra"
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/aclonica"
                android:textAlignment="center"
                android:textColor="#02188F"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/mesIniSemillero" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="72dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:text="@string/siembra"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/nombreVegetal"
                android:layout_width="208dp"
                android:layout_height="57dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/aclonica"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/mesIniSemillero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/mesIniRecogida"
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/aclonica"
                android:textAlignment="center"
                android:textColor="#02188F"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/mesIniSiembra" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/perj2"
                android:textColor="#dc0000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ScrollBeneficios" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:layout_marginTop="26dp"
                android:text="@string/de"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/mesIniSiembra"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/mesFinSemillero"
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/aclonica"
                android:textAlignment="center"
                android:textColor="#02188F"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagen" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="72dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:text="@string/recogida"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="9dp"
                android:layout_height="25dp"
                android:layout_marginTop="26dp"
                android:text="@string/a"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/mesFinSiembra"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/mesFinRecogida"
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/aclonica"
                android:textAlignment="center"
                android:textColor="#02188F"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mesFinSiembra" />

            <TextView
                android:id="@+id/mesFinSiembra"
                android:layout_width="101dp"
                android:layout_height="25dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/aclonica"
                android:textAlignment="center"
                android:textColor="#02188F"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mesFinSemillero" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/benef2"
                android:textColor="#669933"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <HorizontalScrollView
                android:id="@+id/ScrollBeneficios"
                android:layout_width="0dp"
                android:layout_height="62dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView21">

                <LinearLayout
                    android:id="@+id/beneficiosas"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>

            <HorizontalScrollView
                android:id="@+id/ScrollPerjudiciales"
                android:layout_width="0dp"
                android:layout_height="76dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.528"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView22">

                <LinearLayout
                    android:id="@+id/perjudiciales"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/Descripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="31dp"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.562"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/lblDescripicion"
                android:layout_width="174dp"
                android:layout_height="31dp"
                android:layout_marginStart="29dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="223dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/descripcion"
                android:textColor="#02188F"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/Descripcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ScrollPerjudiciales"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>